redo success & text overflow fixed

--- a/css/generator.css
+++ b/css/generator.css
@@ -52,6 +52,8 @@ body {
      height: 100%;
      width: 100%;
      resize: none;
+     white-space: nowrap;
+     overflow-x: scroll;
      overflow: hidden;
      line-height: 1;
 }
